修改移民图片水印

--- a/views/edit_article_yimin.html
+++ b/views/edit_article_yimin.html
@@ -367,7 +367,7 @@
       var newTagStr = '';
       var artType = $("#art-type").attr('data-type');
       if(newsletterType ==2){
-        newTagStr = '留学时讯';
+        newTagStr = '移民时讯';
       }else{
         newTagStr ='';
       }
@@ -454,7 +454,7 @@
       editor.customConfig.debug = false;
       // 关闭粘贴样式的过滤
       editor.customConfig.pasteFilterStyle = false;
-      editor.customConfig.uploadFileName = 'upload';
+      editor.customConfig.uploadFileName = 'yimin_upload';
       // 将图片大小限制为 500K
       editor.customConfig.uploadImgMaxSize = 2*1024 * 1024;
       // 限制一次最多上传 5 张图片
