--- a/public/assets/css/release_article.css
+++ b/public/assets/css/release_article.css
@@ -293,6 +293,18 @@
 .assistant-tab li.article-tab.active .pic {
   background: url('/assets/img/article_icon_WZ@2x.png')
 }
+.assistant-tab li:hover{
+  color: #c13232;
+}
+.assistant-tab .img-tab:hover .pic{
+  background: url('/assets/img/article_icon_picture@2x.png')
+}
+.assistant-tab .h5-tab:hover .pic {
+  background: url('/assets/img/article_icon_H5@2x.png')
+}
+.assistant-tab .article-tab:hover .pic {
+  background: url('/assets/img/article_icon_WZ@2x.png')
+}
 .assistant-cont {
   width: 760px;
   margin: 0 auto;
