--- a/views/release_article.html
+++ b/views/release_article.html
@@ -247,12 +247,53 @@
   <script >
     $(function(){
       var pdfList = JSON.parse($('.assistant-cont').attr('data-pdf'))|| [];
-      $('.img-content').media({
-        width: '100%',
-        height: '500px',
-        autoplay: true,
-        src:pdfList[1].file_path,
-      });
+      if (window.ActiveXObject || "ActiveXObject" in window) {
+        //判断是否为IE浏览器，"ActiveXObject" in window判断是否为IE11 // 下面代码都是处理IE浏览器的情况 
+        //判断是否安装了adobe Reader
+        for (x = 2; x < 10; x++) {
+          try {
+            oAcro = eval("new ActiveXObject('PDF.PdfCtrl." + x + "');");
+            if (oAcro) {
+              flag = true;
+            }
+          } catch (e) {
+            flag = false;
+          }
+        }
+        try {
+          oAcro4 = new ActiveXObject('PDF.PdfCtrl.1');
+          if (oAcro4) {
+            flag = true;
+          }
+        } catch (e) {
+          flag = false;
+        }
+        try {
+          oAcro7 = new ActiveXObject('AcroPDF.PDF.1');
+          if (oAcro7) {
+            flag = true;
+          }
+        } catch (e) {
+          flag = false;
+        }
+        if (flag) {//支持
+          pdfShow(pdfList[1].file_path);//调用显示的方法
+        }else {//不支持
+          $(".img-content").append("对不起,您还没有安装PDF阅读器软件呢,为了方便预览PDF文档,请选择安装！");
+          alert("对不起,您还没有安装PDF阅读器软件呢,为了方便预览PDF文档,请选择安装！");
+          location = "http://ardownload.adobe.com/pub/adobe/reader/win/9.x/9.3/chs/AdbeRdr930_zh_CN.exe";
+        }
+      }else {
+        pdfShow(pdfList[1].file_path);//调用显示的方法
+      }
+      function pdfShow(url){
+        $('.img-content').media({
+          width: '100%',
+          height: '500px',
+          autoplay: true,
+          src:url
+        });
+      }
       $('.assistant-tab li').on('click',function(){
         if(!$(this).hasClass('active')){
           $('.assistant-tab li').removeClass('active');
