修改顾问登录 审核人：海亮

--- a/views/login/login.html
+++ b/views/login/login.html
@@ -172,10 +172,10 @@
     $(document).ready(function () {
 
       // $("form").Vaild();
-      $('.i-checks').iCheck({
-        checkboxClass: 'icheckbox_square-green',
-        radioClass: 'iradio_square-green'
-      });
+      // $('.i-checks').iCheck({
+      //   checkboxClass: 'icheckbox_square-green',
+      //   radioClass: 'iradio_square-green'
+      // });
       //清除记录密码浏览器自带功能
       document.getElementById('newEmail').value = '';
       document.getElementById('password').value = '';
