--- a/views/widget/corporate_events/corporate_events.html
+++ b/views/widget/corporate_events/corporate_events.html
@@ -1,4 +1,4 @@
-{% for yearnum, yearamount in memorabilia_list.list %}
+{% for yearnum, yearamount in memorabilia_list %}
 <div class="dui-layout-lg curyear" style="background:#ffffff">
   <div class="year-box clearfix"><h6 class="year-num">{{ yearnum | shorten(-1)}}</h6> <i class="city-icon iconfont down xiangxia" style="cursor: pointer;">&#xe636;</i> <i class="city-icon iconfont dian">&#xe609;</i></div>
   <div class="kong" style="display: block"></div>
