--- a/views/fragment/article_xiangguantuijian.html
+++ b/views/fragment/article_xiangguantuijian.html
@@ -1,5 +1,5 @@
 <ul class="gw-items">
-  {% for item in relation_recommend.list %}
+  {% for item in relation_recommend %}
   {% if item.uid != null %}
   {% if loop.index <= 4 %}
   <li class="gw-newslist">
