--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -59,7 +59,7 @@
         {% if userinfo.adviser_type == 2 %}
           {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid) %}
         {% else %}
-          {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid) %}
+          {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+article.article_info.country_id,'c='+userinfo.organid,'isArticle=1','uid='+userinfo.uid) %}
         {% endif %}
       </div>
     </div>
