--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -53,8 +53,7 @@
       </div>
       <div style="margin-top: 20px;" class="dui-box-shadow">
         <div class="common-title" style="border:1px solid #dcdcdc;">
-          <i></i>
-          <h3>相关顾问</h3>
+          <i></i><h3>相关顾问</h3>
         </div>
         {% if userinfo.adviser_type == 2 %}
           {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid) %}
