修改底页404跳转 审核人：淑琴

--- a/views/error.html
+++ b/views/error.html
@@ -34,7 +34,7 @@
             window.history.go(-1);
         }
     })
-    setTimeout(() => {
+    setTimeout(function(){
         var h = window.location.href;
         var uid = $('.liuxue-back-btn').attr('data-uid')
         console.log(h)
