--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -11,9 +11,9 @@
     <dd>
       <p class="advisor-name" >{{ advisor.realname }}</p>
       {% if advisor.organid != null %}
-      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >{{ advisor.organid | getCity() }}分公司</p>
+      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >金吉列{{ advisor.organid | getCity() }}分公司</p>
       {% else %}
-      <p class="advisor-bumen" data-cityId ="" >分公司</p>
+      <p class="advisor-bumen" data-cityId ="" >金吉列分公司</p>
       {% endif %}
       <p class="advisor-enjoy">{{ advisor.position_name if advisor.position_name else '咨询顾问'
 }}</p>
@@ -91,9 +91,9 @@
     <dd>
       <p class="advisor-name" >{{ advisor.realname }}</p>
       {% if advisor.organid != null %}
-      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >{{ advisor.organid | getCity() }}分公司</p>
+      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >金吉列{{ advisor.organid | getCity() }}分公司</p>
       {% else %}
-      <p class="advisor-bumen" data-cityId ="" >分公司</p>
+      <p class="advisor-bumen" data-cityId ="" >金吉列分公司</p>
       {% endif %}
       <p class="advisor-enjoy">{{ advisor.position_name if advisor.position_name else '咨询顾问'
         }}</p>
@@ -182,9 +182,9 @@
     <dd>
       <p class="advisor-name" >{{ advisor.realname }}</p>
       {% if advisor.organid != null %}
-      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >{{ advisor.organid | getCity() }}分公司</p>
+      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >金吉列{{ advisor.organid | getCity() }}分公司</p>
       {% else %}
-      <p class="advisor-bumen" data-cityId ="" >分公司</p>
+      <p class="advisor-bumen" data-cityId ="" >金吉列分公司</p>
       {% endif %}
       <p class="advisor-enjoy">{{ advisor.position_name if advisor.position_name else '咨询顾问'
         }}</p>
