--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -76,7 +76,7 @@
                 <h3>相关顾问</h3>
             </div>
             {% if userinfo.adviser_type == 2 %}
-                {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid) %}
+                {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid,'isIm=1') %}
             {% else %}
                 {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid) %}
             {% endif %}
