--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -47,7 +47,7 @@
         <i></i><h3>相关顾问</h3>
       </div>
       {% if userinfo.adviser_type == 2 %}
-        {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+article.article_info.country_id,'c='+userinfo.organid,'uid='+userinfo.uid,'isArticle=1') %}
+        {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+article.article_info.country_id,'c='+userinfo.organid,'uid='+userinfo.uid,'isArticle=1','isIm=1') %}
       {% else %}
         {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+article.article_info.country_id,'c='+userinfo.organid,'isArticle=1','uid='+userinfo.uid) %}
       {% endif %}
