--- a/views/widget/modal/dialog.html
+++ b/views/widget/modal/dialog.html
@@ -1,129 +1,7 @@
 <div class="dialog-modal" style="display: none;">
 	<div class="modal-content">
-	  <div class="formContent formposirion">
-		  <a href="http://www.jjl.cn/zt/2018/20180528_xiazhan/default.shtml" target="_blank" class="more-look"></a>
-		  <a href="javascript:;" class="close"></a>
-		 <div class="form-group">
-			<div><input type="text" placeholder="请输入姓名" class="name" id="myname" maxlength="10"></div>
-			<div><input type="text" placeholder="请输入手机号" class="iphone"></div>
-			<div style="position: relative;font-size:0;">
-			  <input type="text" class="pass-code">
-			  <button type="button" class="send-code" data-coupon="">点击发送验证码</button>
-			  <span class="error"><i></i>手机号格式不正确</span>
-			</div>
-			<div class="select">
-				 <span class="placeholder">意向国家</span>
-				 <em style="font-size: 14px;padding-left: 8px;color: #772c61;" data-id="">请选择意向国家</em>
-				 <ul class="contry-list">
-					  {% set countryList = [
-						 {
-							  name:"美国",
-							  id:"1"
-						 },
-						 {
-							  name:"英国",
-							  id:"2"
-						 },
-						 {
-							name:"澳大利亚",
-							id:"4"
-						 },
-						 {
-							  name:"加拿大",
-							  id:"3"
-						 },
-						 {
-							  name:"新西兰",
-							  id:"5"
-						 },
-						 {
-							  name:"日本",
-							  id:"51"
-						 },
-						 {
-							  name:"韩国",
-							  id:"50"
-						 },
-						 {
-							  name:"中国香港",
-							  id:"54"
-						 },
-						 {
-							  name:"俄罗斯",
-							  id:"100"
-						 },
-						 {
-							  name:"乌克兰",
-							  id:"101"
-						 },
-						 {
-							  name:"爱尔兰",
-							  id:"108"
-						 },
-						 {
-							  name:"意大利",
-							  id:"111"
-						 },
-						 {
-							  name:"西班牙",
-							  id:"112"
-						 },
-						 {
-							  name:"白俄罗斯",
-							  id:"102"
-						 },
-						 {
-							  name:"新加坡",
-							  id:"52"
-						 },
-						 {
-							  name:"马来西亚",
-							  id:"53"
-						 },
-						 {
-							  name:"丹麦",
-							  id:"110"
-						 },
-						 {
-							  name:"德国",
-							  id:"103"
-						 },
-						 {
-							  name:"法国",
-							  id:"104"
-						 },
-						 {
-							  name:"挪威",
-							  id:"105"
-						 },
-						 {
-							  name:"瑞典",
-							  id:"106"
-						 },
-						 {
-							  name:"芬兰",
-							  id:"107"
-						 },
-						 {
-							  name:"荷兰",
-							  id:"109"
-						 },
-						 {
-							  name:"瑞士",
-							  id:"113"
-						 }
-					] %}
-					{% for items in countryList%}
-					<li data-id="{{items.id}}">{{items.name}}</li>
-					{% endfor %}
-				 </ul>
-			</div>
-			<div class="checkbtn">
-			  <input type="checkbox" id="female" checked="checked"/><label for="female">注册JJL网站账号</label>
-			</div>
-		 </div>
-		 <button class="huoqu-button" id="handelSub">点击获取优惠券</button>
+	  <div class="formContent">
+			<a href="javascript:;" class="close"></a>
 	  </div>
 	</div>
  </div>
- <div class="close-btn" style="display: none;"></div>
