--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -31,13 +31,21 @@
               {{userinfo.realname}}<i class="adviser-v-i"></i>
             </span>
           </div>
-          <div class="bdsharebuttonbox page_share_buttons" style="margin-top: 15px;float:right;" data-uid='userinfo.uid'>
-            <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
-            <a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>
-            <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
-            <a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>
-            <span class="art-report-btn" style="font-size: 12px;color:#333;cursor: pointer;" data-artId ="{{article_id}}" >举报</span>
-          </div>
+          <div style='float:right;'>
+            <a onclick="openchat_new('{{ userinfo.new_job_number}}')" class="zixun">立即咨询</a>
+            <div class="nav-phone" style="float:left;margin-top: 3px;">
+              <span class="phone-bg"><i class="iconfont">&#xe618;</i></span>
+              <span class="community-zixun" >留学咨询热线：</span>
+              <span class="community-tel">{{ userinfo.tel }}</span>
+            </div>
+            <div class="bdsharebuttonbox page_share_buttons" style="margin-top: 15px;float: left;" data-uid='{{userinfo.uid}}'>
+              <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
+              <a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>
+              <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+              <a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>
+              <span class="art-report-btn" style="font-size: 12px;color:#333;cursor: pointer;" >举报</span>
+            </div>
+        </div>
         </div>
         <div class="clearfix" >
           <h1 class="adviser-case-detail-h3">
